--- a/데이터 전처리 -1.ipynb
+++ b/데이터 전처리 -1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "1.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,6 +418,136 @@
     "- 새로운 데이터에 대해 예측할 때는 가장 가까운 직선거리에 어떤 데이터가 있는지 살핌\n",
     "- 데이터가 많아야지만 정확도가 올라감\n",
     "- 데이터 크기가 커지면 메모리 많이 필요, 직선거리 계산에도 많은 시간 소요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  25.4  242. ]\n",
+      " [  26.3  290. ]\n",
+      " [  26.5  340. ]\n",
+      " [  29.   363. ]\n",
+      " [  29.   430. ]\n",
+      " [  29.7  450. ]\n",
+      " [  29.7  500. ]\n",
+      " [  30.   390. ]\n",
+      " [  30.   450. ]\n",
+      " [  30.7  500. ]\n",
+      " [  31.   475. ]\n",
+      " [  31.   500. ]\n",
+      " [  31.5  500. ]\n",
+      " [  32.   340. ]\n",
+      " [  32.   600. ]\n",
+      " [  32.   600. ]\n",
+      " [  33.   700. ]\n",
+      " [  33.   700. ]\n",
+      " [  33.5  610. ]\n",
+      " [  33.5  650. ]\n",
+      " [  34.   575. ]\n",
+      " [  34.   685. ]\n",
+      " [  34.5  620. ]\n",
+      " [  35.   680. ]\n",
+      " [  35.   700. ]\n",
+      " [  35.   725. ]\n",
+      " [  35.   720. ]\n",
+      " [  36.   714. ]\n",
+      " [  36.   850. ]\n",
+      " [  37.  1000. ]\n",
+      " [  38.5  920. ]\n",
+      " [  38.5  955. ]\n",
+      " [  39.5  925. ]\n",
+      " [  41.   975. ]\n",
+      " [  41.   950. ]\n",
+      " [   9.8    6.7]\n",
+      " [  10.5    7.5]\n",
+      " [  10.6    7. ]\n",
+      " [  11.     9.7]\n",
+      " [  11.2    9.8]\n",
+      " [  11.3    8.7]\n",
+      " [  11.8   10. ]\n",
+      " [  11.8    9.9]\n",
+      " [  12.     9.8]\n",
+      " [  12.2   12.2]\n",
+      " [  12.4   13.4]\n",
+      " [  13.    12.2]\n",
+      " [  14.3   19.7]\n",
+      " [  15.    19.9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kn._fit_X) #입력데이터확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kn._y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kn49 = KNeighborsClassifier(n_neighbors=49)  #k값 바꾸기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7142857142857143"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kn49.fit(fish_data, fish_target)\n",
+    "kn49.score(fish_data, fish_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7142857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(35/49)"
    ]
   }
  ],
