--- a/회귀모델-1.ipynb
+++ b/회귀모델-1.ipynb
@@ -283,6 +283,82 @@
    "source": [
     "test_array"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------\n",
+    "from sklearn.metrics import mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test_prediction = knr predict(test_input)\n",
+    "mae = mean_absolute_error(test_target, test_prediction)\n",
+    "print(mae)\n",
+    "\n",
+    "-------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1-7. 과대적합(Over fitting) vs 과소적합(Under fitting)\n",
+    "- Train 성능 좋은데 test 성능 좋지 않음 -> 과대적합   (훈련세트에서만 잘 동작)\n",
+    "- Train보다 test성능 좋거나 둘다 좋지 않음 -> 과소적합 \n",
+    "\n",
+    "- 훈련(train)세트가 전체 데이터를 대표한다고 가정하기 때문에 훈련세트를 잘 학습하는 것이 중요\n",
+    "\n",
+    "knr.score(train_input, train_target)\n",
+    "knr.score(test_input, test_target)  둘의 값 비교 \n",
+    "\n",
+    "> 과소적합이 나타나는 이유는 Train, Test 데이터 세트크기가 매우 작거나, Test 데이터가 Train의 특징을 다 담지 못하는 경우 \n",
+    "\n",
+    "> 중요 : 일반화 된 모델을 만드는 것이 중요 \n",
+    "\n",
+    "병원의 예) 요양병원 환자 데이터 -> 한국 주요 질병을 예측하는 모델 \n",
+    "-> 고령화 환자에게만 잘 맞는 모델이 생성됨 (일반화 X)\n",
+    "\n",
+    "\n",
+    "> best 모델: train 데이터를 사용한 평가결과가 조금 더 높게  (이유는 train으로 학습했기때문에 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 현재 우리 모델은 과소적합 \n",
+    "- 과소적합 해결하기 위해 모델을 조금 더 복잡하게 만들면( 훈련 데이터에 맞게 )\n",
+    "- K-NN 은 K의 크기를 줄이면 모델이 더 복잡해짐 \n",
+    "   + K를 줄이면 국지적인 패턴에 민감해짐 \n",
+    "   + K를 늘이면 데이터 전반에 있는 일반적인 패턴을 따름 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------\n",
+    "\n",
+    "knr.n_neighbors = 3\n",
+    "\n",
+    "knr.fit(train_input, train_target)\n",
+    "print(knr.score(train_input, train_target))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "print(knr.score(test_input, test_target))\n",
+    "\n",
+    "\n",
+    "---------------------------------------------"
+   ]
   }
  ],
  "metadata": {
