--- a/결정트리.ipynb
+++ b/결정트리.ipynb
@@ -553,8 +553,110 @@
     "#### 트리모델의 단점\n",
     "- 과적합으로 알고리즘 성능 저하( 트리의 크기를 사전에 제한하는 가지치기 필수 )\n",
     "- 한번에 하나의 변수만 고려( 변수간 상호작용 파악 어려움 )\n",
-    "- 약간의 차이에 따라 트리 모양이 많이 달라짐( 두 변수가 비슷한 수준의 정보력, 약간의 차이로 다른 변수가 선택되면 이후의 트리 구성이 크게 달라짐 )"
+    "- 약간의 차이에 따라 트리 모양이 많이 달라짐( 두 변수가 비슷한 수준의 정보력, 약간의 차이로 다른 변수가 선택되면 이후의 트리 구성이 크게 달라짐 )\n",
+    "\n",
+    "> 앙상블기법 : 랜덤 포레스트\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. 검증세트(Valid Set)\n",
+    "\n",
+    "기존방법 : Train(8) : Test(2) => 결과 \n",
+    " - Train 결과 / Test 결과 = > 과대 적합, 과소 적합 =>  더 나은 성능 \n",
+    " - 문제점 : 모델 튜닝( Test 데이터 활용 )\n",
+    " \n",
+    "NEW 방법 : Train(6) : Valid(2) : Test(2)\n",
+    " - Train => Train과 Valid 로 분리해서 활용\n",
+    " - Test는 전혀 사용하지 않음 (검증에만 활용)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = wine[['alcohol', 'sugar', 'pH']].to_numpy()\n",
+    "target = wine['class'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train(8) : test(2)\n",
+    "train_input, test_input, train_target, test_target = train_test_split(data, target, test_size =0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train(8) => train(6) : valid(2)\n",
+    "sub_input, val_input, sub_target, val_target = train_test_split(data, target, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5197, 3) (1300, 3) (1300, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sub_input.shape, val_input.shape, test_input.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.996921300750433\n",
+      "0.8584615384615385\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "dt = DecisionTreeClassifier(random_state = 42)\n",
+    "dt.fit(sub_input, sub_target)\n",
+    "\n",
+    "print(dt.score(sub_input, sub_target))\n",
+    "print(dt.score(val_input, val_target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
