Colaboratory를 통해 생성됨

--- a/딥러닝_모델.ipynb
+++ b/딥러닝_모델.ipynb
@@ -6,7 +6,7 @@
       "name": "딥러닝 모델.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFEjsTWYJH1eAebd3fZp8g",
+      "authorship_tag": "ABX9TyPKUQqJttJ17smzTaQFqJyv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,32 +45,10 @@
         "(train_input, train_target), (test_input, test_target) = keras.datasets.fashion_mnist.load_data()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xJC4kwHN2GKz",
-        "outputId": "b05111c1-66cc-41d6-cd4a-fd2c258dd4d5"
+        "id": "xJC4kwHN2GKz"
       },
       "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-            "32768/29515 [=================================] - 0s 0us/step\n",
-            "40960/29515 [=========================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-            "26427392/26421880 [==============================] - 0s 0us/step\n",
-            "26435584/26421880 [==============================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-            "16384/5148 [===============================================================================================] - 0s 0us/step\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-            "4423680/4422102 [==============================] - 0s 0us/step\n",
-            "4431872/4422102 [==============================] - 0s 0us/step\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -91,9 +69,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OcJc9n9T368D",
-        "outputId": "3ae5a448-cecc-4536-fd02-91090fbed84b"
+        "outputId": "36163ef7-5250-4097-c582-7f5cf97374b1"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,9 +92,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXm-on-w4K87",
-        "outputId": "c8b67c93-dbae-4332-8c79-5ea52d7cc527"
+        "outputId": "097b3c8e-d521-4ec3-ac8a-8a043b49b710"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,9 +122,9 @@
           "height": 78
         },
         "id": "RuWv5X6w4LG7",
-        "outputId": "68f40663-53c4-417b-99d6-52311bef78a3"
+        "outputId": "7b0bd936-1a5a-4ce1-b506-28f9d4803d4b"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -179,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "enS4acpi4vPj",
-        "outputId": "880aefa4-ffd9-4258-b761-6a27d1e4c721"
+        "outputId": "ec84ed7f-b0cc-4ace-fa79-32678000721d"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +188,7 @@
       "metadata": {
         "id": "W556a0GA6G-6"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -223,9 +201,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6PAnRgGt6V93",
-        "outputId": "51166e33-38e6-47d9-be78-c891a39a694c"
+        "outputId": "e5c18328-39b0-4c14-e565-bc057808f327"
       },
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +232,7 @@
       "metadata": {
         "id": "-52obvYk7YDq"
       },
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -266,7 +244,7 @@
       "metadata": {
         "id": "zsQqTqst7igq"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -279,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XMGuJeAo8KTC",
-        "outputId": "24ff616d-9395-4eb5-faf8-475e082343be"
+        "outputId": "bc3648fa-4c2d-480d-f8aa-f055b41d7cae"
       },
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,9 +280,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zH-st8k28QnK",
-        "outputId": "53b8e30e-56a3-49cc-c926-71d5cee26332"
+        "outputId": "71d70fbc-6397-44a0-b397-f6002a2b188d"
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,13 +296,212 @@
     {
       "cell_type": "code",
       "source": [
+        "# layers 신경망층 \n",
+        "# dense 밀집 : 784개의 input과 10개의 뉴런이 모두 선으로 연결\n",
+        "# ** option\n",
+        "# 10: 뉴런의 개수 \n",
+        "# activation 뉴런의 출력에 적용할 함수 \n",
+        "# input_layer 입력크기 \n",
         "dense = keras.layers.Dense(10, activation='softmax', input_shape=(784,))"
       ],
       "metadata": {
         "id": "auJTonPN8XKZ"
       },
-      "execution_count": 22,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#model \n",
+        "model = keras.Sequential(dense)"
+      ],
+      "metadata": {
+        "id": "2tb36A2QfVY3"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(loss =\"sparse_categorical_crossentropy\", metrics=\"accuracy\")\n",
+        "\n",
+        "\n",
+        "#loss 손실함수 (정답값과 예측값의 차이 )\n",
+        "#metrics 평가지표 "
+      ],
+      "metadata": {
+        "id": "nETk_r8VfVV-"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fit(입력, 정답, 학습횟수)\n",
+        "# 48000개의 데이터로 학습 X 5번\n",
+        "model.fit(train_scaled, train_target, epochs= 5)"
+      ],
+      "metadata": {
+        "id": "FnLg7u1xfVTX",
+        "outputId": "648f2442-1acf-4325-bcf3-9c1911f02ab7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.6106 - accuracy: 0.7942\n",
+            "Epoch 2/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.4793 - accuracy: 0.8389\n",
+            "Epoch 3/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.4562 - accuracy: 0.8469\n",
+            "Epoch 4/5\n",
+            "1500/1500 [==============================] - 2s 2ms/step - loss: 0.4444 - accuracy: 0.8514\n",
+            "Epoch 5/5\n",
+            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.4369 - accuracy: 0.8545\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f0682a74f50>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(val_scaled, val_target)"
+      ],
+      "metadata": {
+        "id": "Cuia_NbpfVNe",
+        "outputId": "1f7c422f-958c-4f42-a3e6-6bd600d37eca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "375/375 [==============================] - 1s 3ms/step - loss: 0.4537 - accuracy: 0.8511\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.45366600155830383, 0.8510833382606506]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 5. 심층신경망(딥러닝)\n",
+        "- 활성화 함수 사용 이유 : 신경망 층의 선형 \n",
+        "방정식의 계산 값에 적용하는 함수 \n",
+        "- 입력(x), 히든, 출력\n",
+        "- 출력층에 적용하는 활성화 함수는 제한적\n",
+        "- 분류문제에서는 클래스에 대한 확률을 출력하기 위해 활성화 함수 사용 \n",
+        "\n",
+        "2개의 선형방정식 있음 \n",
+        "\n",
+        "$a*4+2 =b$\n",
+        "\n",
+        "$b*3-5 =c$\n",
+        "\n",
+        "$a*12+1 =c$\n",
+        "\n",
+        "> 하나의 식으로 변경가능, 층을 추가해도 의미 없음, 활성화함수(값을 비선형) 사용 \n",
+        "\n",
+        "=> 선형계산을 적당하게 비선형적을 비틀어주는   \n",
+        "$ a*4+2 =b$  \n",
+        "$ log(b) = k$  \n",
+        "$k*3-5 =c$  \n"
+      ],
+      "metadata": {
+        "id": "eRCdfz4Giq7e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#sigmoid 가장 기본적인 활성화 함수( 단점 많음, 사용 안함)\n",
+        "# - 출력 z값을 0~1 사이의 값으로 압축\n",
+        "# - activation = 'relu' 고정적으로 많이 사용 \n",
+        "\n",
+        "dense1 = keras.layers.Dense(100, activation='sigmoid', input_shape=(784, 0))\n",
+        "dense2 = keras.layers.Dense(10, activation='softmax' )"
+      ],
+      "metadata": {
+        "id": "LlrjkLzFfVFW"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential([dense1], [dense2])"
+      ],
+      "metadata": {
+        "id": "3p-0FtRfnWf9"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "KM-yeGcXnmMU",
+        "outputId": "53c9fe72-09f4-4ca7-fd24-e97830fbbac4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"[<keras.layers.core.dense.Dense object at 0x7f06827f2410>]\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " dense_1 (Dense)             (None, 784, 100)          100       \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 100\n",
+            "Trainable params: 100\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
     }
   ]
 }
