Colaboratory를 통해 생성됨

--- a/딥러닝_모델.ipynb
+++ b/딥러닝_모델.ipynb
@@ -6,7 +6,7 @@
       "name": "딥러닝 모델.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKUQqJttJ17smzTaQFqJyv",
+      "authorship_tag": "ABX9TyN2MwQ86LYSrAToWqNi11Ok",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -345,11 +345,11 @@
         "model.fit(train_scaled, train_target, epochs= 5)"
       ],
       "metadata": {
-        "id": "FnLg7u1xfVTX",
-        "outputId": "648f2442-1acf-4325-bcf3-9c1911f02ab7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FnLg7u1xfVTX",
+        "outputId": "648f2442-1acf-4325-bcf3-9c1911f02ab7"
       },
       "execution_count": 21,
       "outputs": [
@@ -387,11 +387,11 @@
         "model.evaluate(val_scaled, val_target)"
       ],
       "metadata": {
-        "id": "Cuia_NbpfVNe",
-        "outputId": "1f7c422f-958c-4f42-a3e6-6bd600d37eca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Cuia_NbpfVNe",
+        "outputId": "1f7c422f-958c-4f42-a3e6-6bd600d37eca"
       },
       "execution_count": 22,
       "outputs": [
@@ -450,13 +450,13 @@
         "# - 출력 z값을 0~1 사이의 값으로 압축\n",
         "# - activation = 'relu' 고정적으로 많이 사용 \n",
         "\n",
-        "dense1 = keras.layers.Dense(100, activation='sigmoid', input_shape=(784, 0))\n",
+        "dense1 = keras.layers.Dense(100, activation='sigmoid', input_shape=(784, ))\n",
         "dense2 = keras.layers.Dense(10, activation='softmax' )"
       ],
       "metadata": {
         "id": "LlrjkLzFfVFW"
       },
-      "execution_count": 29,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -467,36 +467,39 @@
       "metadata": {
         "id": "3p-0FtRfnWf9"
       },
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# input : 784 -> hidden : 100 => 784 ㅌ 100 = 78400\n",
+        "# hidden : 100개마다 각각의 bias 덧셈 => 78400 + 100 => 78500\n",
+        "\n",
         "model.summary()"
       ],
       "metadata": {
-        "id": "KM-yeGcXnmMU",
-        "outputId": "53c9fe72-09f4-4ca7-fd24-e97830fbbac4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KM-yeGcXnmMU",
+        "outputId": "3b8ad54b-b4eb-4cfd-d74e-e20ce9e638bf"
       },
-      "execution_count": 31,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"[<keras.layers.core.dense.Dense object at 0x7f06827f2410>]\"\n",
+            "Model: \"[<keras.layers.core.dense.Dense object at 0x7f06826a95d0>]\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " dense_1 (Dense)             (None, 784, 100)          100       \n",
+            " dense_3 (Dense)             (None, 100)               78500     \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 100\n",
-            "Trainable params: 100\n",
+            "Total params: 78,500\n",
+            "Trainable params: 78,500\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ]
