Colaboratory를 통해 생성됨

--- a/딥러닝_모델.ipynb
+++ b/딥러닝_모델.ipynb
@@ -6,7 +6,7 @@
       "name": "딥러닝 모델.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN2MwQ86LYSrAToWqNi11Ok",
+      "authorship_tag": "ABX9TyPWIjrfT+fgiv8dkLfvsN6F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -505,6 +505,71 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 6. 층을 추가하는 다른 방법"
+      ],
+      "metadata": {
+        "id": "WRyPDB-Wo9kN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1번째\n",
+        "\n",
+        "model = keras.Sequential([\n",
+        "                       keras.layers.Dense(100, activation='sigmoid', input_shape=(784, ) , name ='hidden'),\n",
+        " keras.layers.Dense(10, activation='softmax', name ='output' )\n",
+        "]), name = '패션 MNIST모델 '"
+      ],
+      "metadata": {
+        "id": "gmye2IU6pA0V",
+        "outputId": "41df3b27-b95d-488a-972c-c2748ed606fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 137
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-33ce456309d8>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    model = keras.Sequential([\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2번째 \n",
+        "\n",
+        "model = keras.Sequential()\n",
+        "model.add( keras.layers.Dense(100, activation='sigmoid', input_shape=(784, )))\n",
+        "model.add(keras.layers.Dense(10, activation='softmax' ))"
+      ],
+      "metadata": {
+        "id": "paewA-FLpBh9"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "0mUk9v5_pBfd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
